--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,27 @@
   "configurations": [
     {
       "type": "java",
+      "name": "Zigzagtraversal",
+      "request": "launch",
+      "mainClass": "BinaryTree.Zigzagtraversal",
+      "projectName": "striver-dsa-sheet_5972ee76"
+    },
+    {
+      "type": "java",
+      "name": "Identical",
+      "request": "launch",
+      "mainClass": "BinaryTree.Identical",
+      "projectName": "striver-dsa-sheet_5972ee76"
+    },
+    {
+      "type": "java",
+      "name": "MaximumPathSum",
+      "request": "launch",
+      "mainClass": "BinaryTree.MaximumPathSum",
+      "projectName": "striver-dsa-sheet_5972ee76"
+    },
+    {
+      "type": "java",
       "name": "Diameter",
       "request": "launch",
       "mainClass": "BinaryTree.Diameter",
